# versebase_python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
src/: .flake8  mypy.ini  pyproject.toml
src/app/: __init__.py  conftest.py  web.py
src/app/cli/: interpreter.py  parser.py
src/app/core/: schemas.py  storages.py
src/app/core/config/: __init__.py  _helpers.py  base.py  development.py  testing.py
src/app/db/: datatypes.py  index.py  meta.py  runner.py  table.py
src/app/marketplace/: gql.py  models.py  router.py  schemas.py
src/app/tests/: env_vars.py
src/app/tests/cli/: test_parser.py
src/app/tests/db/: test_table.py
