[tool.poetry]
name = "versebase-python"
version = "0.1.0"
description = ""
authors = ["Evgeniy Goncharuck <iterlace.dev@sent.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
flake8 = "^6.1.0"
types-parsimonious = "^0.10.0.9"
anytree = "^2.9.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
# fastapi = {version = "0.103.2", extras = ["all"]}
pytest = "7.4.2"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "0.21.1"
fakeredis = "^2.18.1"
pytest-xdist = "3.3.1"
pytest-mock = "3.11.1"
polyfactory = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py311"]
force-exclude = '''
/(
  \.git
  |\.venv
  |venv
  |\.mypy_cache
  |\.pytest_cache
  |__pycache__
  |__init__\.py
  |migrations
)/
'''
line_length = 88


[tool.isort]
profile = "black"
src_paths = ["isort", "test", "app"]
known_web = ["fastapi", "sqlalchemy"]
known_firstparty = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "WEB", "FIRSTPARTY", "LOCALFOLDER"]
length_sort = true
line_length = 88
group_by_package = true
skip_glob = "*/migrations/*,*/venv/*,*/.venv/*,*/__init__.py"

[flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", "migrations", ".pytest_cache", "venv", ".venv"]
extend-ignore = ["E203", "E501"]

[tool.pytest.ini_options]
minversion = "7.0"
# log_print = true
log_cli = true
log_cli_level = "INFO"
python_files = "tests/*.py"
python_classes = "Test*"
asyncio_mode = "auto"
testpaths = ["tests", "integration"]
addopts = "-s -p app.tests.plugins.env_vars"